add book search by genre request
