# api_gateway/internal/handlers/book/book_handler_init.go
@@ -33,6 +33,7 @@ func (h *handler) RegisterRouter(router *gin.Engine) {
 		{
 			admin.POST("", h.CreateBook)
 		}
+		general.GET("/genre/:name", h.GetBookByGenre)
 		general.GET("/search", h.FindBooks)
 		general.GET("", h.GetBook)
 	}
